tests/snapshots/tbir__testbench_periodic_post_eval_emitted_cpp.snap
---
source: tests/tbir.rs
expression: cpp
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: TbReactivePostEval

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VScoreboardTypedQueue.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct Sample {
    uint64_t got = 0;
    uint64_t exp = 0;
};
inline bool operator==(const Sample& a, const Sample& b) { return a.got == b.got && a.exp == b.exp; }
inline bool operator!=(const Sample& a, const Sample& b) { return !(a == b); }

static harc_rt::HarcWide<4> harc_pack_Sample(const Sample& value) {
    harc_rt::HarcWide<4> _packed{};
    harc_rt::harc_wide_write_bits(_packed, 0, 64, value.exp);
    harc_rt::harc_wide_write_bits(_packed, 64, 64, value.got);
    return _packed;
}
template<typename Raw> static Sample harc_unpack_Sample(const Raw& raw) {
    if constexpr (requires { raw.got; raw.exp; }) {
        Sample value{};
        value.got = raw.got;
        value.exp = raw.exp;
        return value;
    } else {
    auto _packed = harc_rt::harc_wide_zext<4>(harc_rt::harc_read(raw));
    Sample value{};
    value.exp = (uint64_t)harc_rt::harc_bits(_packed, 63, 0);
    value.got = (uint64_t)harc_rt::harc_bits(_packed, 127, 64);
    return value;
    }
}
template<typename Sig> static void harc_drive_Sample(Sig& sig, const Sample& value) {
    if constexpr (requires { sig.got; sig.exp; }) {
        sig.got = value.got;
        sig.exp = value.exp;
    } else {
        harc_rt::harc_assign(sig, harc_pack_Sample(value));
    }
}

struct Collector {
    harc_rt::HarcQueue<Sample> samples;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct Auditor {
    uint64_t mismatches = 0;
    uint64_t last_got = 0;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct TbReactive {
    VScoreboardTypedQueue* dut = nullptr;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VScoreboardTypedQueue* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_TbReactivePostEval(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VScoreboardTypedQueue;
    auto* dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto* tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "ScoreboardTypedQueue", "TbReactivePostEval", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    TbReactive _tb;
    auto Collector_push_sample = [&](Collector& self, uint64_t g, uint64_t e) -> void {
        Sample s{}; (void)s;
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                s = Sample{};
                s.got = g;
                s.exp = e;
                self.samples.push(s);
                return;
                break;
            }
            default: return;
            }
        }
    };
    auto Auditor_audit = [&](Auditor& self, uint64_t g, uint64_t e) -> void {
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                self.last_got = g;
                if ((g != e)) { __bb = 2; } else { __bb = 3; }
                break;
            }
            case 1: {
                return;
                break;
            }
            case 2: {
                self.mismatches = (self.mismatches + 1);
                __bb = 1;
                break;
            }
            case 3: {
                __bb = 1;
                break;
            }
            default: return;
            }
        }
    };
    Collector collector;
    Auditor auditor;
    std::function<void()> TbReactivePostEval_tb_periodic_3;
    TbReactivePostEval_tb_periodic_3 = [&]() -> void {
        uint64_t __t0 = 0; (void)__t0;
        uint64_t __t1 = 0; (void)__t1;
        uint64_t __t2 = 0; (void)__t2;
        Sample s{}; (void)s;
        int __bb = 0;
        while (true) {
            switch (__bb) {
            case 0: {
                __t0 = harc_rt::harc_read(dut->dut_value);
                __t1 = harc_rt::harc_read(dut->expected_value);
                Collector_push_sample(collector, __t0, __t1);
                __t2 = 0;
                __bb = 2;
                break;
            }
            case 1: {
                return;
                break;
            }
            case 2: {
                if ((((uint64_t)collector.samples.size()) != 0)) { __bb = 3; } else { __bb = 4; }
                break;
            }
            case 3: {
                s = collector.samples.pop();
                Auditor_audit(auditor, s.got, s.exp);
                __bb = 2;
                break;
            }
            case 4: {
                __bb = 1;
                break;
            }
            default: return;
            }
        }
    };
    _post_eval_services.push_back([&]() {
        static int64_t _tbper_3_last = 0;
        if ((int64_t)cycle_count - _tbper_3_last >= 1) {
            _tbper_3_last = (int64_t)cycle_count;
            TbReactivePostEval_tb_periodic_3();
        }
    });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    auto _run_slot_lambda = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_TbReactivePostEval (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst_n, 1);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(5));
                    __bb = 1;
                    break;
                }
                case 1: {
                    if (!((auditor.mismatches >= 1))) {
                        sim_log_line("FAIL", "expected at least one mismatch, got %lld", harc_rt::harc_printf_ll(auditor.mismatches));
                        ctx.errors++;
                    }
                    if (!((auditor.last_got == 7))) {
                        sim_log_line("FAIL", "last sampled dut_value=%lld, expected 7", harc_rt::harc_printf_ll(auditor.last_got));
                        ctx.errors++;
                    }
                    if (!((((uint64_t)collector.samples.size()) == 0))) {
                        sim_log_line("FAIL", "collector queue not drained: %lld", harc_rt::harc_printf_ll(((uint64_t)collector.samples.size())));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "ALL TESTS PASSED - testbench_periodic_post_eval");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    };
    _run_slot.thread = _run_slot_lambda(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_TbReactivePostEval(argc, argv);
    if (std::strcmp(test_sel, "TbReactivePostEval") == 0) return run_TbReactivePostEval(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "TbReactivePostEval");
    return 1;
}
