tests/snapshots/tbir__tlm_blocking_bus_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"tlm_method_blocking_bus_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: TlmMethodBlockingBusTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTlmMemory.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct TlmMethodBlockingBusTb {
    VTlmMemory* dut = nullptr;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VTlmMemory* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_TlmMethodBlockingBusTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VTlmMemory;
    auto* dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto* tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "TlmMemory", "TlmMethodBlockingBusTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    long long now_ps = 0;
    auto eval_clocks_until = [&](long long t_ps) {
        if (t_ps <= now_ps) return;
        now_ps = t_ps;
        dut->eval();
        _harc_trace_dump_at((uint64_t)now_ps, "", (uint64_t)cycle_count);
        if (_trace_time <= (uint64_t)now_ps) _trace_time = (uint64_t)now_ps + 1;
    };

    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        now_ps = (long long)_trace_time;
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        now_ps = (long long)_trace_time;
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) { _harc_trace_dump_next("clk", (uint64_t)cycle_count); now_ps = (long long)_trace_time; }
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    // Route an empty-queue pop through the sim's own FATAL path instead
    // of the runtime header's abort backstop: the run records the
    // failure, unwinds normally, and still writes its log and trace.
    // `_fatal` is a loop-exit condition, so the run stops at the next
    // scheduler tick — same semantics as `log(fatal, ...)`. Emitted
    // verbatim by both codegens so the two traces stay diffable.
    harc_rt::HarcQueueFatalScope _queue_fatal_scope([&]() {
        sim_log_line("FATAL", "pop() on an empty queue -- guard it with .empty()/.size(), or wait until the producer has pushed");
        ctx.errors++;
        _fatal = true;
    });

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    TlmMethodBlockingBusTb _tb;
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    auto _run_slot_lambda = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_TlmMethodBlockingBusTest (TB-IR loop-switch)
            uint64_t initial = 0; (void)initial;
            uint64_t __t0 = 0; (void)__t0;
            uint64_t updated = 0; (void)updated;
            uint64_t reread = 0; (void)reread;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    harc_rt::harc_assign(dut->mem_read_req_valid, 0);
                    harc_rt::harc_assign(dut->mem_read_rsp_ready, 0);
                    harc_rt::harc_assign(dut->mem_read_ooo_req_valid, 0);
                    harc_rt::harc_assign(dut->mem_read_ooo_rsp_ready, 0);
                    harc_rt::harc_assign(dut->mem_poke_req_valid, 0);
                    harc_rt::harc_assign(dut->mem_poke_rsp_ready, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 1;
                    break;
                }
                case 1: {
                    harc_rt::harc_assign(dut->rst, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 2;
                    break;
                }
                case 2: {
                    // bus.read tlm_method
                    harc_rt::harc_assign(dut->mem_read_addr, 5);
                    trace.tlm_call(cycle_count, "", "mem", "read", "request", "initiator");
                    dut->mem_read_req_valid = 1;
                    { int _b = 16; while (!dut->mem_read_req_ready && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_read_req_ready) { sim_log_line("FAIL", "TLM mem.read request timed out after 16 cycles (dut->mem_read_req_ready stuck low)"); ctx.errors++; } }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_read_req_valid = 0;
                    dut->mem_read_rsp_ready = 1;
                    {
                        bool _rsp_ok = true;
                        { int _b = 16; while (!dut->mem_read_rsp_valid && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_read_rsp_valid) { sim_log_line("FAIL", "TLM mem.read response timed out after 16 cycles (dut->mem_read_rsp_valid stuck low)"); ctx.errors++; _rsp_ok = false; } }
                        if (_rsp_ok) {
                            trace.tlm_call(cycle_count, "", "mem", "read", "response", "initiator");
                            initial = harc_rt::harc_read(dut->mem_read_rsp_data);
                        }
                    }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_read_rsp_ready = 0;
                    if (!((initial == 261))) {
                        sim_log_line("FAIL", "initial read got 0x%08llx, expected 0x00000105", harc_rt::harc_printf_ll(initial));
                        ctx.errors++;
                    }
                    // bus.poke tlm_method
                    harc_rt::harc_assign(dut->mem_poke_addr, 8);
                    harc_rt::harc_assign(dut->mem_poke_data, 3405691582);
                    trace.tlm_call(cycle_count, "", "mem", "poke", "request", "initiator");
                    dut->mem_poke_req_valid = 1;
                    { int _b = 16; while (!dut->mem_poke_req_ready && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_poke_req_ready) { sim_log_line("FAIL", "TLM mem.poke request timed out after 16 cycles (dut->mem_poke_req_ready stuck low)"); ctx.errors++; } }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_poke_req_valid = 0;
                    dut->mem_poke_rsp_ready = 1;
                    {
                        bool _rsp_ok = true;
                        { int _b = 16; while (!dut->mem_poke_rsp_valid && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_poke_rsp_valid) { sim_log_line("FAIL", "TLM mem.poke response timed out after 16 cycles (dut->mem_poke_rsp_valid stuck low)"); ctx.errors++; _rsp_ok = false; } }
                        if (_rsp_ok) {
                            trace.tlm_call(cycle_count, "", "mem", "poke", "response", "initiator");
                        }
                    }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_poke_rsp_ready = 0;
                    // bus.read tlm_method
                    harc_rt::harc_assign(dut->mem_read_addr, 8);
                    trace.tlm_call(cycle_count, "", "mem", "read", "request", "initiator");
                    dut->mem_read_req_valid = 1;
                    { int _b = 16; while (!dut->mem_read_req_ready && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_read_req_ready) { sim_log_line("FAIL", "TLM mem.read request timed out after 16 cycles (dut->mem_read_req_ready stuck low)"); ctx.errors++; } }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_read_req_valid = 0;
                    dut->mem_read_rsp_ready = 1;
                    {
                        bool _rsp_ok = true;
                        { int _b = 16; while (!dut->mem_read_rsp_valid && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_read_rsp_valid) { sim_log_line("FAIL", "TLM mem.read response timed out after 16 cycles (dut->mem_read_rsp_valid stuck low)"); ctx.errors++; _rsp_ok = false; } }
                        if (_rsp_ok) {
                            trace.tlm_call(cycle_count, "", "mem", "read", "response", "initiator");
                            updated = harc_rt::harc_read(dut->mem_read_rsp_data);
                        }
                    }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_read_rsp_ready = 0;
                    if (!((updated == 3405691582))) {
                        sim_log_line("FAIL", "updated read got 0x%08llx, expected 0xCAFEBABE", harc_rt::harc_printf_ll(updated));
                        ctx.errors++;
                    }
                    // bus.read tlm_method
                    harc_rt::harc_assign(dut->mem_read_addr, 5);
                    trace.tlm_call(cycle_count, "", "mem", "read", "request", "initiator");
                    dut->mem_read_req_valid = 1;
                    { int _b = 16; while (!dut->mem_read_req_ready && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_read_req_ready) { sim_log_line("FAIL", "TLM mem.read request timed out after 16 cycles (dut->mem_read_req_ready stuck low)"); ctx.errors++; } }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_read_req_valid = 0;
                    dut->mem_read_rsp_ready = 1;
                    {
                        bool _rsp_ok = true;
                        { int _b = 16; while (!dut->mem_read_rsp_valid && _b > 0) { co_await harc_rt::wait_cycles(_slot, 1); _b--; } if (_b == 0 && !dut->mem_read_rsp_valid) { sim_log_line("FAIL", "TLM mem.read response timed out after 16 cycles (dut->mem_read_rsp_valid stuck low)"); ctx.errors++; _rsp_ok = false; } }
                        if (_rsp_ok) {
                            trace.tlm_call(cycle_count, "", "mem", "read", "response", "initiator");
                            reread = harc_rt::harc_read(dut->mem_read_rsp_data);
                        }
                    }
                    co_await harc_rt::wait_cycles(_slot, 1);
                    dut->mem_read_rsp_ready = 0;
                    if (!((reread == 261))) {
                        sim_log_line("FAIL", "re-read got 0x%08llx, expected 0x00000105", harc_rt::harc_printf_ll(reread));
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: blocking bus tlm_method read/poke call edges");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    };
    _run_slot.thread = _run_slot_lambda(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    now_ps = (long long)_trace_time;
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        now_ps = (long long)_trace_time;
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) { _harc_trace_dump_next("clk", (uint64_t)cycle_count); now_ps = (long long)_trace_time; }
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        now_ps = (long long)_trace_time;
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_TlmMethodBlockingBusTest(argc, argv);
    if (std::strcmp(test_sel, "TlmMethodBlockingBusTest") == 0) return run_TlmMethodBlockingBusTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "TlmMethodBlockingBusTest");
    return 1;
}
